--- a/Supermarket Frontend/package.json
+++ b/Supermarket Frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jspdf": "^1.3.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
+    "jspdf": "^2.5.2",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.1",
     "tailwindcss": "^3.4.10"
   },
